fix student name and button alignment

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -32,7 +32,6 @@ body {
 .mark_btn {
   border-radius: 25px;
   margin: .25rem;
-  float: right;
   opacity: 0;
   transition: opacity .5s; 
 }
@@ -69,4 +68,17 @@ body {
   background-image: -webkit-gradient(linear, left bottom, left top, from(#a8edea), to(#fed6e3));
   background-image: -webkit-linear-gradient(bottom, #a8edea 0%, #fed6e3 100%);
   background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+}
+
+/* make sure student name and mark button are center aligned */
+.student-row {
+  display: flex;
+  align-items: center;
+  height: 2rem;
+}
+
+/* button is right aligned */
+.student-row-btn {
+  position: absolute;
+  right:0
 }
